# CellularAutomata

./: .travis.yml  CMakeLists.txt  CMakeReport.cmake  README.md  main.cpp  maingpu.cpp
examples/: B3S23-pulsar.cpp
gpu/: CMakeLists.txt  CompileByRow.cpp  CompileNaive.cpp  GameOfLife.cpp  GameOfLife.h  Initialize.cpp  ProcessByRow.cl  ProcessMultiArray.cl  main.cpp
lib/: CMakeLists.txt
lib/include/: omp-helper.hpp
lib/include/cellular-automata/: FlexibleArray.hpp  FlexibleArrayImpl.hpp  Index.hpp  Simulator.hpp  game-of-life.hpp  index-space.hpp  neighbourhood.hpp  profiler.hpp  state-space.hpp  storage-basic.hpp  storage-type.hpp
lib/include/cellular-automata/evolution/: EvolutionFunction.hpp  EvolutionFunctionLangtonsAnt.hpp  EvolutionFunctionLife.hpp  EvolutionFunctionRule.hpp
lib/include/cellular-automata/storage/: ArrayMapper.hpp  ArrayMapper1D.hpp  ArrayMapper2D.hpp  ElementMapper.hpp  ElementMapperImpl.hpp  FlexibleArray.hpp  FlexibleArrayImpl.hpp
lib/src/cellular-automata/: FlexibleArray.cpp  FlexibleArrayImpl.cpp  Simulator.cpp  game-of-life.cpp  index-space.cpp  profiler.cpp
lib/src/cellular-automata/evolution/: EvolutionFunctionLangtonsAnt.cpp  EvolutionFunctionLife.cpp  EvolutionFunctionRule.cpp
lib/src/cellular-automata/storage/: ArrayMapper1D.cpp  ArrayMapper2D.cpp  ElementMapper.cpp  ElementMapperImpl.cpp  FlexibleArray.cpp  FlexibleArrayImpl.cpp
lib/test/: CMakeLists.txt  test_Empty.cpp  test_Fixed1DStorage.cpp  test_Fixed2DStorage.cpp  test_OpenMPSupported.cpp
